--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,19 @@
+language: go
+
+go:
+  - tip
+
+addons:
+  ssh_known_hosts: tsvetkov.io
+
+before_script:
+  - go get -u -v github.com/spf13/hugo
+
 before_install:
-- openssl aes-256-cbc -K $encrypted_ed5856d8084c_key -iv $encrypted_ed5856d8084c_iv
-  -in deploy-key.enc -out deploy-key -d
+  - openssl aes-256-cbc -K $encrypted_ed5856d8084c_key -iv $encrypted_ed5856d8084c_iv -in deploy-key.enc -out deploy-key -d
+
+script:
+  - hugo --theme=hugo_theme_robust
+
+after_success:
+  - bash deploy.sh
