--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,33 @@
 language: go
 
 go:
-  - tip
+  - 1.6.2
+
+os:
+  - linux
+
+dd:
+  - openssl aes-256-cbc -K $encrypted_b09bc9aa8d76_key -iv $encrypted_b09bc9aa8d76_iv -in deploy-key.enc -out deploy-key -d
 
 addons:
   ssh_known_hosts: tsvetkov.io
 
-before_script:
-  - go get -u -v github.com/spf13/hugo
-
-dd:
-- openssl aes-256-cbc -K $encrypted_b09bc9aa8d76_key -iv $encrypted_b09bc9aa8d76_iv -in deploy-key.enc -out deploy-key -d
+install:
+  - go get -v -u github.com/spf13/hugo
 
 script:
+  - git clone https://github.com/atsvetkov/tsvetkov.io.git tsvetkov.io
+  - git clone https://github.com/dim0627/hugo_theme_robust.git tsvetkov.io-hugo/themes/hugo_theme_robust
+  - cd tsvetkov.io
   - hugo --theme=hugo_theme_robust
 
 after_success:
-  - bash deploy.sh
+  - test $TRAVIS_BRANCH == "master"
+  - cd tsvetkov.io/public
+  - git init    
+  - git remote add deploy "deploy@tsvetkov.io:/var/www/tsvetkov.io"
+  - git config user.name "Travis CI"
+  - git config user.email "iammamba@gmail.com" 
+  - git add .
+  - git commit -m "Deployed by Travis CI"
+  - git push --force deploy master
