step for adding SSH key to user .ssh folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,15 @@ go:
 os:
   - linux
 
-dd:
-  - openssl aes-256-cbc -K $encrypted_b09bc9aa8d76_key -iv $encrypted_b09bc9aa8d76_iv -in deploy-key.enc -out deploy-key -d
-
 addons:
   ssh_known_hosts: tsvetkov.io
+
+before_install:
+  - set -x
+  - openssl aes-256-cbc -K $encrypted_b09bc9aa8d76_key -iv $encrypted_b09bc9aa8d76_iv -in deploy-key.enc -out deploy-key -d
+  - rm deploy-key.enc
+  - chmod 600 deploy-key
+  - mv deploy-key ~/.ssh/id_rsa
 
 install:
   - go get -v -u github.com/spf13/hugo
