--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseurl = "http://test.tsvetkov.io/"
+baseurl = "http://tsvetkov.io/"
 languageCode = "en-us"
-title = "My personal web site!"
+title = "Alexander Tsvetkov's blog"
