--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,55 @@
 baseurl = "http://tsvetkov.io/"
 languageCode = "en-us"
 title = "Alexander Tsvetkov's blog"
+theme = "hugo-cactus-theme"
+googleAnalytics = "UA-51668451-2"
+disqusShortname = "tsvetkovio"
+
+[params]
+	name = "Alexander Tsvetkov"
+	description = ""
+	bio = ""
+	
+    # Enter optionally your twitter account
+	twitter = "atsvetkov"
+
+	enableRSS = true
+
+	# Add custom assets with their paths relative to the static folder
+	customCSS = []
+	customJS  = []
+
+	# The variables below are optionally too and can be used to
+	# translate or customize each string of the theme.
+
+	# Navigation links
+	home = ""
+	about = ""
+	subscribe = ""
+	
+    # Pagination links
+	olderPosts = ""
+	newerPosts = ""
+	readMore = ""
+	copyright = "Alexander Tsvetkov &copy; 2016"
+	
+    # Sharing options and author information in posts
+	aboutAuthor = "Surfing the code"
+	tweet = ""
+	share = ""
+
+	# 404 page
+	title404 = ""
+	subtitle404 = ""
+
+	# Choose a font for the social icons in the footer. Either "mono-social" or "font-awesome"
+	iconFont = "font-awesome"
+
+    # The social icons can be styled differently if you use mono as font - circle, rounded, or empty
+    socialIconStyle = "circle"
+
+# Add additional social link entries underneath
+[social]
+    twitter  = "https://www.twitter.com/atsvetkov"
+    facebook = "https://www.facebook.com/alex.tsvetkov.18"
+    github   = "https://www.github.com/atsvetkov"
