--- a/config.toml
+++ b/config.toml
@@ -50,6 +50,6 @@ disqusShortname = "tsvetkovio"
 
 # Add additional social link entries underneath
 [social]
-    twitter  = "https://www.twitter.com/atsvetkov"
-    facebook = "https://www.facebook.com/alex.tsvetkov.18"
-    github   = "https://www.github.com/atsvetkov"
+    facebook 	= "https://www.facebook.com/alex.tsvetkov.18"
+    github   	= "https://www.github.com/atsvetkov"
+	instagram	= "https://www.instagram.com/alexander_tsvetkov/"
