--- a/config.toml
+++ b/config.toml
@@ -17,3 +17,4 @@ disqusShortname = "tsvetkovio"
     facebook 	= "https://www.facebook.com/alex.tsvetkov.18"
     github   	= "https://www.github.com/atsvetkov"
 	instagram	= "https://www.instagram.com/alexander_tsvetkov/"
+	rss			= "https://tsvetkov.io/index.xml"
