--- a/config.gh-pages.toml
+++ b/config.gh-pages.toml
@@ -17,4 +17,4 @@ disqusShortname = "tsvetkovio"
     facebook 	= "https://www.facebook.com/alex.tsvetkov.18"
     github   	= "https://www.github.com/atsvetkov"
 	instagram	= "https://www.instagram.com/alexander_tsvetkov/"
-	rss			= "https://atsvetkov.github.io/tsvetkov.io/index.xml"
+	rss			= "index.xml"
