--- a/config.surfingthecode.com.toml
+++ b/config.surfingthecode.com.toml
@@ -10,12 +10,11 @@ PygmentsCodeFences = true
   	post = "/:year/:month/:title/"
 
 [params]
-	name = "Surfing the code"
-	description = "POST /thoughts"
+	description = "with Alexander Tsvetkov"
 	disqusShortname = "surfingthecode-com"
 
 [social]
     facebook 	= "https://www.facebook.com/alex.tsvetkov.18"
     github   	= "https://www.github.com/atsvetkov"
 	instagram	= "https://www.instagram.com/alexander_tsvetkov/"
-	rss			= "https://surfingthecode.com/index.xml"
+	rss			= "index.xml"
