--- a/config.surge.toml
+++ b/config.surge.toml
@@ -17,4 +17,4 @@ disqusShortname = "tsvetkovio"
     facebook 	= "https://www.facebook.com/alex.tsvetkov.18"
     github   	= "https://www.github.com/atsvetkov"
 	instagram	= "https://www.instagram.com/alexander_tsvetkov/"
-	rss			= "https://tsvetkovio.surge.sh/index.xml"
+	rss			= "index.xml"
