--- a/config.tsvetkov.io.toml
+++ b/config.tsvetkov.io.toml
@@ -10,12 +10,11 @@ PygmentsCodeFences = true
   	post = "/:year/:month/:title/"
 
 [params]
-	name = "Surfing the code"
-	description = "POST /thoughts"
+	description = "with Alexander Tsvetkov"
 	disqusShortname = "tsvetkovio"
 
 [social]
     facebook 	= "https://www.facebook.com/alex.tsvetkov.18"
     github   	= "https://www.github.com/atsvetkov"
 	instagram	= "https://www.instagram.com/alexander_tsvetkov/"
-	rss			= "https://tsvetkov.io/index.xml"
+	rss			= "index.xml"
