--- a/config.surfingthecode.com.toml
+++ b/config.surfingthecode.com.toml
@@ -17,4 +17,4 @@ PygmentsCodeFences = true
     facebook 	= "https://www.facebook.com/alex.tsvetkov.18"
     github   	= "https://www.github.com/atsvetkov"
 	instagram	= "https://www.instagram.com/alexander_tsvetkov/"
-	rss			= "index.xml"
+	rss			= "/index.xml"
